; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_table.c_release_table.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_table.c_release_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.table = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @release_table(%struct.table* %0) #0 {
  %2 = alloca %struct.table*, align 8
  store %struct.table* %0, %struct.table** %2, align 8
  %3 = load %struct.table*, %struct.table** %2, align 8
  %4 = getelementptr inbounds %struct.table, %struct.table* %3, i32 0, i32 0
  %5 = call i32 @InterlockedDecrement(i32* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load %struct.table*, %struct.table** %2, align 8
  %9 = call i32 @free_table(%struct.table* %8)
  br label %10

10:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @InterlockedDecrement(i32*) #1

declare dso_local i32 @free_table(%struct.table*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
